--- a/static/main.css
+++ b/static/main.css
@@ -124,18 +124,20 @@ button:hover {
 
 #content-wrap {
   padding-bottom: 10rem;
+  min-height: 80vh;
 }
 
 footer {
   background-color: #2F4F4F;
   color: white;
-  margin-top: 50px;
   margin-bottom: 0;
   padding: 5px 20px;
   display: grid;
   grid-template-columns: 2fr 175px 100px;
   align-items: center;
 
+  min-height: 8rem;
+  height: 10%;
   height: 8rem;
   width: calc(100% - 40px);
   position: absolute;
