--- a/templates/utilities.html
+++ b/templates/utilities.html
@@ -11,7 +11,7 @@
 {% block main %}
 <section>
     <div id="p1">
-        <!--pic/doodle-->
+        <img src="{{ url_for('static', filename='utilities-image.png') }}">
     </div>
     <div id="p2">
         Transportation is an essential part of our lifestyle, but most vehicles use gasoline or diesel, both of which
