--- a/static/main.css
+++ b/static/main.css
@@ -34,7 +34,7 @@ nav h1 {
   display: none;
   position: absolute;
   width: 130px;
-  overflow: scroll;
+  overflow: hidden;
   background-color: #F5F5F5;
   padding: 5px 20px;
   z-index: 1;
