--- a/static/pages.css
+++ b/static/pages.css
@@ -33,10 +33,10 @@ nav h1 {
 .dropdown-content {
   display: none;
   position: absolute;
-  width: 130px;
-  overflow: scroll;
+  overflow: hidden;
   background-color: #F5F5F5;
   padding: 5px 20px;
+  margin-bottom: 20px;
   z-index: 1;
 }
 
