--- a/templates/more/sources.html
+++ b/templates/more/sources.html
@@ -6,3 +6,51 @@
 {% block css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='pages.css') }}">
 {% endblock %}
+
+{% block main %}
+<p>
+  "1 Air Mile · Blueskymodel". Blueskymodel.Org, https://blueskymodel.org/air-mile. <br>
+  "Allbirds To Introduce Carbon Footprint Labelling". Fashionz, 2020, 
+  https://fashionz.co.nz/allbirds-to-introduce-carbon-footprint-labelling/. <br>
+  Berg, Achim et al. "Fashion On Climate". Mckinsey & Company, 2020, 
+  https://www.mckinsey.com/industries/retail/our-insights/fashion-on-climate. <br>
+  "Carbon Footprint Factsheet | Center For Sustainable Systems". Css.Umich.Edu, 2017, 
+  https://css.umich.edu/factsheets/carbon-footprint-factsheet. <br>
+  "Fashion Footprint Calculator". Thredup, https://www.thredup.com/fashionfootprint. <br>
+  Fleischmann, María. "How Much Do Our Wardrobes Cost To The Environment?". World Bank, 
+  2021, https://www.worldbank.org/en/news/feature/2019/09/23/costo-moda-medio-
+  ambiente. <br>
+  "Food's Carbon Footprint". Green Eatz, https://www.greeneatz.com/foods-carbon-footprint.html. <br>
+  "Frequently Asked Questions (Faqs) - U.S. Energy Information Administration (EIA)". Eia.Gov, 
+  2021, https://www.eia.gov/tools/faqs/faq.php?id=74&t=11. <br>
+  "Greenhouse Gas Emissions From A Typical Passenger Vehicle | US EPA". US EPA, 
+  https://www.epa.gov/greenvehicles/greenhouse-gas-emissions-typical-passenger-
+  vehicle. <br>
+  "ICAO Carbon Emissions Calculator". Icao.Int, 2021, 
+  https://www.icao.int/environmental-protection/Carbonoffset/Pages/default.aspx. <br>
+  Jones, Benji. "Here Are 3 Ways To Find Out Where Your Electricity Comes From". Business 
+  Insider, 2019, https://www.businessinsider.com/where-does-my-electricity-come-from-
+  location-sources-clean-energy-2019-12#what-to-do-if-you-want-to-switch-to-renewables-without-having-to-buy-new-hardware-4. <br>
+  "Livestock's Long Shadow - Wikipedia". En.Wikipedia.Org, 
+  https://en.wikipedia.org/wiki/Livestock%27s_Long_Shadow. <br>
+  May, Sandra. "What Is Climate Change?". NASA, 2017, 
+  https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-chan
+  Ge-k4.html. <br>
+  "Meat And Greenhouse Gas On Earth Day". Green Eatz, 2013, https://www.greeneatz.com/1
+  /post/2013/04/earth-day-livestock-and-greenhouse-gas.html. <br>
+  “Public Transportation’s Role In Responding To Climate Change”. 2010, 
+  https://www.transit.dot.gov/sites/fta.dot.gov/files/docs/PublicTransportationsRoleInRespo
+  ndingToClimateChange2010.pdf. <br>
+  "Offset Your Flight Emissions!". Co2.Myclimate.Org, 2021, <br>
+  https://co2.myclimate.org/en/flight_calculators/new. <br>
+  Ro, Christine. "Can Fashion Ever Be Sustainable?". Bbc.Com, 2020, 
+  https://www.bbc.com/future/article/20200310-sustainable-fashion-how-to-buy-clothes-go
+  od-for-the-climate. <br>
+  "Routes To Lower Greenhouse Gas Emissions Transportation Future | US EPA". US EPA, 
+  https://www.epa.gov/greenvehicles/routes-lower-greenhouse-gas-emissions-transportati
+  on-future#:~:text=There%20are%20three%20routes%20to,and%20using%20lower%2Dc
+  arbon%20fuels. <br>
+  "Transportation And Climate Change". National Geographic Society, 
+  https://www.nationalgeographic.org/media/transportation-and-climate-change/.
+</p>
+{% endblock %}
