--- a/templates/more/sources.html
+++ b/templates/more/sources.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block main %}
-<p>
+<p id="src">
   "1 Air Mile · Blueskymodel". Blueskymodel.Org, https://blueskymodel.org/air-mile. <br>
   "Allbirds To Introduce Carbon Footprint Labelling". Fashionz, 2020, 
   https://fashionz.co.nz/allbirds-to-introduce-carbon-footprint-labelling/. <br>
