Added clothing image

--- a/templates/clothing.html
+++ b/templates/clothing.html
@@ -10,7 +10,7 @@
 {% block main %}
 <section>
   <div id="p1">
-    <!--pic/doodle-->
+    <img src="{{ url_for('static', filename='clothing-image.png') }}">
   </div>
   <div id="p2">
     Huge amounts of water are needed to grow cotton for a piece of clothing, but most of our clothes are made from the
