--- a/templates/food.html
+++ b/templates/food.html
@@ -23,31 +23,31 @@
         <p>Your projected annual CO2 emissions from food (lbs): {{ foodco2 }} </p>
         {% else %}
         <form method="post">
-            <label for="beef">How many times a week do you have a serving of beef?</label>
+            <label for="beef">How many times a week do you have a serving of beef?</label><br>
             <input name="beef" id="beef" type="number" min="0" step="1" oninput="validity.valid||(value='');"
                 required><br>
-            <label for="pork">How many times a week do you have a serving of pork?</label>
+            <label for="pork">How many times a week do you have a serving of pork?</label><br>
             <input name="pork" id="pork" type="number" min="0" step="1" oninput="validity.valid||(value='');"
                 required><br>
-            <label for="poultry">How many times a week do you have a serving of poultry?</label>
+            <label for="poultry">How many times a week do you have a serving of poultry?</label><br>
             <input name="poultry" id="poultry" type="number" min="0" step="1" oninput="validity.valid||(value='');"
                 required><br>
-            <label for="cheese">How many times a week do you have a serving of cheese?</label>
+            <label for="cheese">How many times a week do you have a serving of cheese?</label><br>
             <input name="cheese" id="cheese" type="number" min="0" step="1" oninput="validity.valid||(value='');"
                 required><br>
-            <label for="eggs">How many times a week do you have a serving of eggs?</label>
+            <label for="eggs">How many times a week do you have a serving of eggs?</label><br>
             <input name="eggs" id="eggs" type="number" min="0" step="1" oninput="validity.valid||(value='');"
                 required><br>
-            <label for="rice">How many times a week do you have a serving of rice?</label>
+            <label for="rice">How many times a week do you have a serving of rice?</label><br>
             <input name="rice" id="rice" type="number" min="0" step="1" oninput="validity.valid||(value='');"
                 required><br>
-            <label for="legumes">How many times a week do you have a serving of legumes?</label>
+            <label for="legumes">How many times a week do you have a serving of legumes?</label><br>
             <input name="legumes" id="legumes" type="number" min="0" step="1" oninput="validity.valid||(value='');"
                 required><br>
-            <label for="carrots">How many times a week do you have a serving of carrots?</label>
+            <label for="carrots">How many times a week do you have a serving of carrots?</label><br>
             <input name="carrots" id="carrots" type="number" min="0" step="1" oninput="validity.valid||(value='');"
                 required><br>
-            <label for="potatoes">How many times a week do you have a serving of potatoes?</label>
+            <label for="potatoes">How many times a week do you have a serving of potatoes?</label><br>
             <input name="potatoes" id="potatoes" type="number" min="0" step="1" oninput="validity.valid||(value='');"
                 required><br>
             <input type="submit" value="Submit">
