--- a/templates/food.html
+++ b/templates/food.html
@@ -49,7 +49,7 @@
                 required><br>
             <label for="potatoes">How many times a week do you have a serving of potatoes?</label><br>
             <input name="potatoes" id="potatoes" type="number" min="0" step="1" oninput="validity.valid||(value='');"
-                required><br>
+                required><br><br>
             <input type="submit" value="Submit">
         </form>
         {% endif %}
