--- a/templates/utilities.html
+++ b/templates/utilities.html
@@ -29,7 +29,7 @@
         {% else %}
         <form method="post">
             <h2>Electricity</h2>
-            <label for="kwh_pm">How many kWh do you use every month?</label>
+            <label for="kwh_pm">How many kWh do you use every month?</label><br>
             <input name="kwh_pm" id="kwh_pm" type="number" min="0" step="1" oninput="validity.valid||(value='');"
                 required>
 
