--- a/templates/clothing.html
+++ b/templates/clothing.html
@@ -28,7 +28,7 @@
     <form method="post">
       <label for="clothing_often">How often do you buy clothes in a year?</label><!-- more clarity --><br>
       <input name="clothing_often" id="clothing_often" type="number" min="0" step="1"
-        oninput="validity.valid||(value='');" required><br>
+        oninput="validity.valid||(value='');" required><br><br>
       <label for="clothing_pieces">On average, about how many pieces of each do you buy each time you shop?</label>
       <ol name="clothing_pieces">
         <ul>
