--- a/templates/food.html
+++ b/templates/food.html
@@ -10,7 +10,7 @@
 {% block main %}
 <section>
     <div id="p1">
-        <img src="{{ url_for('static', filename='food-image.png') }}">
+        <img src="{{ url_for('static', filename='food-image.png') }}" width="200" height="200">
     </div>
     <div id="p2">
         The growing, processing, storing, transporting and disposing of foods all produce some amount of greenhouse gas.
