--- a/static/main.css
+++ b/static/main.css
@@ -98,6 +98,8 @@ hr {
   text-align: center;
   font-size: 10pt;
   font-style: italic;
+  padding-right: 80px;
+  padding-left: 80px;
 }
 
 .calculator-bar div {
