--- a/templates/clothing.html
+++ b/templates/clothing.html
@@ -25,7 +25,7 @@
     polymer, polyester, for which 70 million barrels of oil are used annually to make. On top of making the materials
     for our clothes, sewing and transporting our clothes also produce greenhouse gases. The emissions from all of these
     actions combined make it so that the fashion industry to accounts for 10% of global carbon emissions, not to mention
-    20% of the waste water. <br>
+    20% of the waste water. <br><br>
     <form method="post">
       <label for="clothing_often">How often do you buy clothes in a year?</label><!-- more clarity --><br>
       <input name="clothing_often" id="clothing_often" type="number" min="0" step="1"
