--- a/static/pages.css
+++ b/static/pages.css
@@ -103,6 +103,8 @@ section {
 #p3 {
     grid-column: 2 / 3;
     grid-row: 1 / span 2;
+    padding-right: 60px;
+    padding-left: 60px;
 }
 
 #content-wrap {
