--- a/templates/clothing.html
+++ b/templates/clothing.html
@@ -51,7 +51,7 @@
       <label for="laundryloads">On average, how many loads of laundry do you wash in a week?</label><br>
       <input name="laundryloads" id="laundryloads" type="number" min="0" step="1" oninput="validity.valid||(value='');"
         required>
-      <p>Do you dry your clothes on a clothesline or in a clothes dryer?</p>
+      <p>Do you dry your clothes on a clothesline?</p>
       <input name="clothesline" id="yesline" type="radio" value="True" required>
       <label for="yesline">Yes</label><br>
       <input name="clothesline" id="noline" type="radio" value="False" required>
