Removed default active class

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 ('/clothing', 'clothing', 'CLOTHING'),
 ('/utilities', 'utilities', 'UTILITIES')
 ] -%}
-{% set active_page = active_page|default('index') -%}
+{% set active_page = active_page|default('') -%}
 
 <!DOCTYPE html>
 <html lang="en">
