Organized some links (move unused to action)

--- a/templates/more/action.html
+++ b/templates/more/action.html
@@ -5,3 +5,9 @@
 {% block css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='pages.css') }}">
 {% endblock %}
+
+<!-- moving unused sources to action page-->
+{% block main %}
+<p id="src">
+    https://co2.myclimate.org/en/flight_calculators/new. </p>
+{% endblock %}
