--- a/templates/more/sources.html
+++ b/templates/more/sources.html
@@ -23,8 +23,7 @@
   "Fashion Footprint Calculator". Thredup, https://www.thredup.com/fashionfootprint. </p>
 <p id="src">
   Fleischmann, María. "How Much Do Our Wardrobes Cost To The Environment?". World Bank,
-  2021, https://www.worldbank.org/en/news/feature/2019/09/23/costo-moda-medio-
-  ambiente. </p>
+  2021, https://www.worldbank.org/en/news/feature/2019/09/23/costo-moda-medio-ambiente. </p>
 <p id="src">
   "Food's Carbon Footprint". Green Eatz, https://www.greeneatz.com/foods-carbon-footprint.html. </p>
 <p id="src">
@@ -32,15 +31,14 @@
   2021, https://www.eia.gov/tools/faqs/faq.php?id=74&t=11. </p>
 <p id="src">
   "Greenhouse Gas Emissions From A Typical Passenger Vehicle | US EPA". US EPA,
-  https://www.epa.gov/greenvehicles/greenhouse-gas-emissions-typical-passenger-
-  vehicle. </p>
+  https://www.epa.gov/greenvehicles/greenhouse-gas-emissions-typical-passenger-vehicle. </p>
 <p id="src">
   "ICAO Carbon Emissions Calculator". Icao.Int, 2021,
   https://www.icao.int/environmental-protection/Carbonoffset/Pages/default.aspx. </p>
 <p id="src">
   Jones, Benji. "Here Are 3 Ways To Find Out Where Your Electricity Comes From". Business
-  Insider, 2019, https://www.businessinsider.com/where-does-my-electricity-come-from-
-  location-sources-clean-energy-2019-12#what-to-do-if-you-want-to-switch-to-renewables-without-having-to-buy-new-hardware-4.
+  Insider, 2019,
+  https://www.businessinsider.com/where-does-my-electricity-come-from-location-sources-clean-energy-2019-12#what-to-do-if-you-want-to-switch-to-renewables-without-having-to-buy-new-hardware-4.
 </p>
 <p id="src">
   "Livestock's Long Shadow - Wikipedia". En.Wikipedia.Org,
@@ -50,25 +48,21 @@
   https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-chan
   Ge-k4.html. </p>
 <p id="src">
-  "Meat And Greenhouse Gas On Earth Day". Green Eatz, 2013, https://www.greeneatz.com/1
-  /post/2013/04/earth-day-livestock-and-greenhouse-gas.html. </p>
+  "Meat And Greenhouse Gas On Earth Day". Green Eatz, 2013,
+  https://www.greeneatz.com/1/post/2013/04/earth-day-livestock-and-greenhouse-gas.html. </p>
 <p id="src">
-  “Public Transportation’s Role In Responding To Climate Change”. 2010,
-  https://www.transit.dot.gov/sites/fta.dot.gov/files/docs/PublicTransportationsRoleInRespo
-  ndingToClimateChange2010.pdf. </p>
+  “Public Transportation’s Role In Responding To Climate Change”. 2010
+  https://www.transit.dot.gov/sites/fta.dot.gov/files/docs/PublicTransportationsRoleInRespondingToClimateChange2010.pdf.
+</p>
 <p id="src">
   "Offset Your Flight Emissions!". Co2.Myclimate.Org, 2021, </p>
-<p id="src">
-  https://co2.myclimate.org/en/flight_calculators/new. </p>
 <p id="src">
   Ro, Christine. "Can Fashion Ever Be Sustainable?". Bbc.Com, 2020,
   https://www.bbc.com/future/article/20200310-sustainable-fashion-how-to-buy-clothes-go
   od-for-the-climate. </p>
 <p id="src">
   "Routes To Lower Greenhouse Gas Emissions Transportation Future | US EPA". US EPA,
-  https://www.epa.gov/greenvehicles/routes-lower-greenhouse-gas-emissions-transportati
-  on-future#:~:text=There%20are%20three%20routes%20to,and%20using%20lower%2Dc
-  arbon%20fuels. </p>
+  https://www.epa.gov/greenvehicles/routes-lower-greenhouse-gas-emissions-transportation-future </p>
 <p id="src">
   "Transportation And Climate Change". National Geographic Society,
   https://www.nationalgeographic.org/media/transportation-and-climate-change/.
