--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
 <img src="{{ url_for('static', filename='front-banner.png') }}" alt="cost of carbon, New Zealanders protesting">
 <h6>New Zealand Parliament Climate Strike Protest by Nevada Halbert CC BY 2.0</h6>
 
-<h2>ABOUT</h2>
+<h2>FACTS</h2>
 <hr>
-<p class="caption">
+<div id="facts">
   Climate change is the change in temperature and weather of a place. In recent times, the Earth’s temperature has gone
   up, and these changes in temperature can have huge long-term effects. For example, the warming of earth’s climate
   causes ice to melt, leading to rising sea levels. The weather also changes, causing hotter summers, colder winters,
@@ -23,8 +23,7 @@
   livestock are all activities that use up energy, and burning fossil fuels, such as coal and oil, is one way we get
   this energy. Burning fossil fuels emit greenhouse gases, like CO2, into the air, and these gases cause the air to heat
   up leading to climate change as they accumulate in the atmosphere.
-
-</p>
+</div>
 
 <h2>EXPLORE</h2>
 <hr>
