--- a/templates/more/action.html
+++ b/templates/more/action.html
@@ -8,6 +8,13 @@
 
 <!-- moving unused sources to action page-->
 {% block main %}
+<h3><b>Learning about Climate Change:</b></h3>
 <p id="src">
-    https://co2.myclimate.org/en/flight_calculators/new. </p>
+    
+    <a href = "https://unccelearn.org/"> United Nations Climate Change e-learning </a>   
+    <a href = "https://www.sciencelearn.org.nz/topics/climate-change"> Science Learning Club </a>    
+    
+        
+        
+        </p>
 {% endblock %}
