--- a/templates/more/action.html
+++ b/templates/more/action.html
@@ -8,13 +8,22 @@
 
 <!-- moving unused sources to action page-->
 {% block main %}
-<h3><b>Learning about Climate Change:</b></h3>
+
 <p id="src">
     
-    <a href = "https://unccelearn.org/"> United Nations Climate Change e-learning </a>   
-    <a href = "https://www.sciencelearn.org.nz/topics/climate-change"> Science Learning Club </a>    
+    Below are resources to help you better understand <b>climate change</b> and how to reduce your <b>carbon foodprint</b>:
     
-        
-        
+    <b>What is Climate Change?</b><br>
+    <a href = "https://www.un.org/en/climatechange/what-is-climate-change"> United Nations: What is Climate Change </a>   <br>
+    <a href = "https://www.sciencelearn.org.nz/topics/climate-change"> Science Learning Club: Climate Change </a><br>
+    <a href = "https://climatekids.nasa.gov/climate-change-meaning/"> NASA (kids edition): Climate Change Meaning </a><br>
+    <a href = "https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-change-k4.html"> NASA: What is Climate Change </a><br>
+    <a href = "https://www.bbc.com/news/science-environment-24021772"> BBC News: What is Climate Change </a><br>
+    <br>
+    <b>How to decrease your carbon footprint? by: </b>
+     <a href = "https://www.futurelearn.com/info/blog/how-to-reduce-your-carbon-footprint-tips"> Future Learn's: 20 top tips on reducing your carbon footprint </a>   <br>
+    <a href = "https://www.nytimes.com/guides/year-of-living-better/how-to-reduce-your-carbon-footprint"> The New York Times: How to reduce your carbon footprint </a><br>
+    <a href = "https://www.co2nsensus.com/blog/reducing-carbon-footprint-in-schools"> CO2nsensus: 10 Ways to REduce Carbon Footprint in Schools </a><br>
+         
         </p>
 {% endblock %}
