--- a/templates/more/action.html
+++ b/templates/more/action.html
@@ -11,7 +11,7 @@
 
 <p id="src">
     
-    Below are resources to help you better understand <b>climate change</b> and how to reduce your <b>carbon foodprint</b>:
+    Below are resources to help you better understand <b>climate change</b> and how to reduce your <b>carbon foodprint</b>:<br><br>
     
     <b>What is Climate Change?</b><br>
     <a href = "https://www.un.org/en/climatechange/what-is-climate-change"> United Nations: What is Climate Change </a>   <br>
@@ -20,7 +20,7 @@
     <a href = "https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-change-k4.html"> NASA: What is Climate Change </a><br>
     <a href = "https://www.bbc.com/news/science-environment-24021772"> BBC News: What is Climate Change </a><br>
     <br>
-    <b>How to decrease your carbon footprint? by: </b>
+    <b>How to decrease your carbon footprint? by: </b><br>
      <a href = "https://www.futurelearn.com/info/blog/how-to-reduce-your-carbon-footprint-tips"> Future Learn's: 20 top tips on reducing your carbon footprint </a>   <br>
     <a href = "https://www.nytimes.com/guides/year-of-living-better/how-to-reduce-your-carbon-footprint"> The New York Times: How to reduce your carbon footprint </a><br>
     <a href = "https://www.co2nsensus.com/blog/reducing-carbon-footprint-in-schools"> CO2nsensus: 10 Ways to REduce Carbon Footprint in Schools </a><br>
