--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 <hr>
 {% if totalco2 != None %}
 <h2>
-  Total CO2 produced: {{ totalco2 }}
+  Total CO2 produced: {{ totalco2 }} lbs
 </h2>
 {% else %}
 <p class="caption">
