--- a/static/pages.css
+++ b/static/pages.css
@@ -25,6 +25,14 @@ nav h1 {
     padding: 15px 10px;
 }
 
+.center{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width:50%;
+
+}
+
 .dropdown {
   position: relative;
   display: inline-block;
