--- a/templates/more/about.html
+++ b/templates/more/about.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="p1">
+<div class="center">
     <img src="{{ url_for('static', filename='groupphoto.jpeg') }}">
 </div>
 {% endblock %}
