--- a/templates/more/about.html
+++ b/templates/more/about.html
@@ -9,5 +9,7 @@
 {% block main %}
 <div class="center">
     <img src="{{ url_for('static', filename='groupphoto.jpeg') }}">
+    
+    We are the creators of carbometer: Ryan, Lexian, Jessia, Noella. (ordered from left to right)
 </div>
 {% endblock %}
