--- a/templates/more/about.html
+++ b/templates/more/about.html
@@ -10,6 +10,6 @@
 <div class="center">
     <img src="{{ url_for('static', filename='groupphoto.jpeg') }}">
     
-    We are the creators of carbometer: Ryan, Lexian, Jessia, Noella. (ordered from left to right)
+   We are the creators of carbometer: Ryan, Lexian, Jessica, and Noella. (ordered from left to right)
 </div>
 {% endblock %}
