--- a/templates/more/about.html
+++ b/templates/more/about.html
@@ -9,7 +9,8 @@
 {% block main %}
 <div class="center">
     <img src="{{ url_for('static', filename='groupphoto.jpeg') }}">
-    
-   We are the creators of carbometer: Ryan, Lexian, Jessica, and Noella. (ordered from left to right)
+
+    <p class="caption">We are the creators of carbometer: Ryan, Lexian, Jessica, and Noella. (ordered from left to
+        right)</p>
 </div>
 {% endblock %}
