--- a/templates/more/sources.html
+++ b/templates/more/sources.html
@@ -8,63 +8,103 @@
 {% endblock %}
 
 {% block main %}
-<p id="src">
-  "1 Air Mile · Blueskymodel". Blueskymodel.Org, https://blueskymodel.org/air-mile. </p>
-<p id="src">
+<p class="src">
+  "1 Air Mile · Blueskymodel". Blueskymodel.Org, <a
+    href="https://blueskymodel.org/air-mile.">https://blueskymodel.org/air-mile.</a></p>
+<p class="src">
   "Allbirds To Introduce Carbon Footprint Labelling". Fashionz, 2020,
-  https://fashionz.co.nz/allbirds-to-introduce-carbon-footprint-labelling/. </p>
-<p id="src">
+  <a
+    href="https://fashionz.co.nz/allbirds-to-introduce-carbon-footprint-labelling/.">https://fashionz.co.nz/allbirds-to-introduce-carbon-footprint-labelling/.</a>
+</p>
+<p class="src">
   Berg, Achim et al. "Fashion On Climate". Mckinsey & Company, 2020,
-  https://www.mckinsey.com/industries/retail/our-insights/fashion-on-climate. </p>
-<p id="src">
+  <a
+    href="https://www.mckinsey.com/industries/retail/our-insights/fashion-on-climate.">https://www.mckinsey.com/industries/retail/our-insights/fashion-on-climate.</a>
+</p>
+<p class="src">
+  Berners-Lee, Mike, and Duncan Clark. “What's the Carbon Footprint of ... a Load of Laundry?” The Guardian, Guardian
+  News
+  and Media, 25 Nov. 2010,
+  <a
+    href="https://www.theguardian.com/environment/green-living-blog/2010/nov/25/carbon-footprint-load-laundry.">https://www.theguardian.com/environment/green-living-blog/2010/nov/25/carbon-footprint-load-laundry.</a>
+</p>
+<p class="src">
   "Carbon Footprint Factsheet | Center For Sustainable Systems". Css.Umich.Edu, 2017,
-  https://css.umich.edu/factsheets/carbon-footprint-factsheet. </p>
-<p id="src">
-  "Fashion Footprint Calculator". Thredup, https://www.thredup.com/fashionfootprint. </p>
-<p id="src">
+  <a
+    href="https://css.umich.edu/factsheets/carbon-footprint-factsheet.">https://css.umich.edu/factsheets/carbon-footprint-factsheet.</a>
+</p>
+<p class="src">
+  "Fashion Footprint Calculator". Thredup, <a
+    href="https://www.thredup.com/fashionfootprint.">https://www.thredup.com/fashionfootprint.</a></p>
+<p class="src">
   Fleischmann, María. "How Much Do Our Wardrobes Cost To The Environment?". World Bank,
-  2021, https://www.worldbank.org/en/news/feature/2019/09/23/costo-moda-medio-ambiente. </p>
-<p id="src">
-  "Food's Carbon Footprint". Green Eatz, https://www.greeneatz.com/foods-carbon-footprint.html. </p>
-<p id="src">
+  2021, <a
+    href="https://www.worldbank.org/en/news/feature/2019/09/23/costo-moda-medio-ambiente.">https://www.worldbank.org/en/news/feature/2019/09/23/costo-moda-medio-ambiente.</a>
+</p>
+<p class="src">
+  "Food's Carbon Footprint". Green Eatz, <a
+    href="https://www.greeneatz.com/foods-carbon-footprint.html.">https://www.greeneatz.com/foods-carbon-footprint.html.</a>
+</p>
+<p class="src">
   "Frequently Asked Questions (Faqs) - U.S. Energy Information Administration (EIA)". Eia.Gov,
-  2021, https://www.eia.gov/tools/faqs/faq.php?id=74&t=11. </p>
-<p id="src">
+  2021, <a
+    href="https://www.eia.gov/tools/faqs/faq.php?id=74&t=11.">https://www.eia.gov/tools/faqs/faq.php?id=74&t=11.</a></p>
+<p class="src">
   "Greenhouse Gas Emissions From A Typical Passenger Vehicle | US EPA". US EPA,
-  https://www.epa.gov/greenvehicles/greenhouse-gas-emissions-typical-passenger-vehicle. </p>
-<p id="src">
+  <a
+    href="https://www.epa.gov/greenvehicles/greenhouse-gas-emissions-typical-passenger-vehicle.">https://www.epa.gov/greenvehicles/greenhouse-gas-emissions-typical-passenger-vehicle.</a>
+</p>
+<p class="src">
   "ICAO Carbon Emissions Calculator". Icao.Int, 2021,
-  https://www.icao.int/environmental-protection/Carbonoffset/Pages/default.aspx. </p>
-<p id="src">
+  <a
+    href="https://www.icao.int/environmental-protection/Carbonoffset/Pages/default.aspx.">https://www.icao.int/environmental-protection/Carbonoffset/Pages/default.aspx.</a>
+</p>
+<p class="src">
   Jones, Benji. "Here Are 3 Ways To Find Out Where Your Electricity Comes From". Business
   Insider, 2019,
-  https://www.businessinsider.com/where-does-my-electricity-come-from-location-sources-clean-energy-2019-12#what-to-do-if-you-want-to-switch-to-renewables-without-having-to-buy-new-hardware-4.
+  <a
+    href="https://www.businessinsider.com/where-does-my-electricity-come-from-location-sources-clean-energy-2019-12#what-to-do-if-you-want-to-switch-to-renewables-without-having-to-buy-new-hardware-4.">https://www.businessinsider.com/where-does-my-electricity-come-from-location-sources-clean-energy-2019-12#what-to-do-if-you-want-to-switch-to-renewables-without-having-to-buy-new-hardware-4.</a>
 </p>
-<p id="src">
+<p class="src">
   "Livestock's Long Shadow - Wikipedia". En.Wikipedia.Org,
-  https://en.wikipedia.org/wiki/Livestock%27s_Long_Shadow. </p>
-<p id="src">
-  May, Sandra. "What Is Climate Change?". NASA, 2017,
-  https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-chan
-  Ge-k4.html. </p>
-<p id="src">
-  "Meat And Greenhouse Gas On Earth Day". Green Eatz, 2013,
-  https://www.greeneatz.com/1/post/2013/04/earth-day-livestock-and-greenhouse-gas.html. </p>
-<p id="src">
-  “Public Transportation’s Role In Responding To Climate Change”. 2010
-  https://www.transit.dot.gov/sites/fta.dot.gov/files/docs/PublicTransportationsRoleInRespondingToClimateChange2010.pdf.
+  <a
+    href="https://en.wikipedia.org/wiki/Livestock%27s_Long_Shadow.">https://en.wikipedia.org/wiki/Livestock%27s_Long_Shadow.</a>
 </p>
-<p id="src">
-  "Offset Your Flight Emissions!". Co2.Myclimate.Org, 2021, </p>
-<p id="src">
+<p class="src">
+  May, Sandra. "What Is Climate Change?". NASA, 2017,
+  <a href="https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-chan
+  Ge-k4.html.">https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-chan
+    Ge-k4.html.</a>
+</p>
+<p class="src">
+  "Meat And Greenhouse Gas On Earth Day". Green Eatz, 2013,
+  <a
+    href="https://www.greeneatz.com/1/post/2013/04/earth-day-livestock-and-greenhouse-gas.html.">https://www.greeneatz.com/1/post/2013/04/earth-day-livestock-and-greenhouse-gas.html.</a>
+</p>
+<p class="src">
+  “Public Transportation’s Role In Responding To Climate Change”. 2010
+  <a
+    href="https://www.transit.dot.gov/sites/fta.dot.gov/files/docs/PublicTransportationsRoleInRespondingToClimateChange2010.pdf.">https://www.transit.dot.gov/sites/fta.dot.gov/files/docs/PublicTransportationsRoleInRespondingToClimateChange2010.pdf.</a>
+</p>
+<p class="src">
+  "Offset Your Flight Emissions!". Co2.Myclimate.Org, 2021,
+  <a
+    href="https://co2.myclimate.org/en/flight_calculators/new.">https://co2.myclimate.org/en/flight_calculators/new.</a>
+</p>
+<p class="src">
   Ro, Christine. "Can Fashion Ever Be Sustainable?". Bbc.Com, 2020,
-  https://www.bbc.com/future/article/20200310-sustainable-fashion-how-to-buy-clothes-go
-  od-for-the-climate. </p>
-<p id="src">
+  <a href="https://www.bbc.com/future/article/20200310-sustainable-fashion-how-to-buy-clothes-go
+  od-for-the-climate.">https://www.bbc.com/future/article/20200310-sustainable-fashion-how-to-buy-clothes-go
+    od-for-the-climate.</a>
+</p>
+<p class="src">
   "Routes To Lower Greenhouse Gas Emissions Transportation Future | US EPA". US EPA,
-  https://www.epa.gov/greenvehicles/routes-lower-greenhouse-gas-emissions-transportation-future </p>
-<p id="src">
+  <a
+    href="https://www.epa.gov/greenvehicles/routes-lower-greenhouse-gas-emissions-transportation-future">https://www.epa.gov/greenvehicles/routes-lower-greenhouse-gas-emissions-transportation-future</a>
+</p>
+<p class="src">
   "Transportation And Climate Change". National Geographic Society,
-  https://www.nationalgeographic.org/media/transportation-and-climate-change/.
+  <a
+    href="https://www.nationalgeographic.org/media/transportation-and-climate-change/.">https://www.nationalgeographic.org/media/transportation-and-climate-change/.</a>
 </p>
 {% endblock %}
