--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,10 @@
 <hr>
 {% if totalco2 != None %}
 <h2>
-  Total CO2 produced: {{ totalco2 }} lbs
+  Total CO2 produced: {{ totalco2 }} lbs/year*
 </h2>
+<p class="caption">*Please note that this an approximation and does not account for all possible sources of carbon
+  emissions</p>
 {% else %}
 <p class="caption">
   Calculate your carbon footprint.
