--- a/templates/more/action.html
+++ b/templates/more/action.html
@@ -11,7 +11,7 @@
 
 <p class="src">
     Below are resources to help you better understand <b>climate change</b> and how to reduce your <b>carbon
-        foodprint</b>:
+        footprint</b>:
 </p>
 <p class="src">
     <b>What is Climate Change?</b>
@@ -31,7 +31,7 @@
         tips on reducing your carbon footprint </a><br>
     <a href="https://www.nytimes.com/guides/year-of-living-better/how-to-reduce-your-carbon-footprint"> The New York
         Times: How to reduce your carbon footprint </a><br>
-    <a href="https://www.co2nsensus.com/blog/reducing-carbon-footprint-in-schools"> CO2nsensus: 10 Ways to REduce Carbon
+    <a href="https://www.co2nsensus.com/blog/reducing-carbon-footprint-in-schools"> CO2nsensus: 10 Ways to Reduce Carbon
         Footprint in Schools </a><br>
 </p>
 {% endblock %}
