--- a/static/pages.css
+++ b/static/pages.css
@@ -103,7 +103,6 @@ section {
   grid-template-columns: 1fr 1fr;
   margin: 0 0.5em;
   padding: 1em;
-  min-height: 80vh;
 }
 
 #p1 {
@@ -118,6 +117,7 @@ section {
 
 #content-wrap {
   padding-bottom: 10rem;
+  min-height: 80vh;
 }
 
 footer {
@@ -158,4 +158,18 @@ footer div {
 .src {
     margin: 1em;
     line-height: 20px;
+}
+
+.action {
+  display: flex;
+}
+.action-button {
+  max-width: 225px;
+}
+ .action-label {
+  color: black;
+  text-decoration: none;
+}
+.action-label:hover {
+  text-decoration: underline;
 }
