--- a/templates/more/action.html
+++ b/templates/more/action.html
@@ -6,9 +6,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='pages.css') }}">
 {% endblock %}
 
-<!-- moving unused sources to action page-->
 {% block main %}
-
 <p class="src">
     Below are resources to help you better understand <b>climate change</b> and how to reduce your <b>carbon
         footprint</b>:
@@ -16,6 +14,27 @@
 <p class="src">
     <b>What is Climate Change?</b>
 </p>
+
+<div class="action">
+    <a href="http://flood.firetree.net/?ll=43.3251,-101.6015&z=13&m=7" target="_blank"><img class="action-button"
+            src="{{ url_for('static', filename='action_floodmaps.png') }}" alt="Floodmaps Button">
+    </a>
+    <p class="action-label">FLOOD MAPS</p>
+    <a href="https://climate.nasa.gov/climate_resource_center/interactives" target="_blank"><img class="action-button"
+            src="{{ url_for('static', filename='action_nasa.png') }}" alt="NASA Button">
+    </a>
+    <p class="action-label">NASA INTERACTIVES</p>
+    <a href="https://www.nytimes.com/guides/year-of-living-better/how-to-reduce-your-carbon-footprint"
+        target="_blank"><img class="action-button" src="{{ url_for('static', filename='action_nytimes.png') }}"
+            alt="New York Times Button">
+    </a>
+    <p class="action-label">NY TIMES</p>
+    <a href="https://www.un.org/en/actnow" target="_blank"><img class="action-button"
+            src="{{ url_for('static', filename='action_un.png') }}" alt="United Nations Button">
+    </a>
+    <p class="action-label">UN ACT NOW</p>
+</div>
+
 <p class="src">
     <a href="https://www.un.org/en/climatechange/what-is-climate-change"> United Nations: What is Climate Change
     </a><br>
